<resources>
    <string name="app_name">assessment1</string>
    <string name="splash">PENGHITUNG WINRATE MLBB</string>
    <string name="ichsan">Muhammad Ichsan Nurfauzi</string>
    <string name="intro">Sebagai penggemar game mobile legends tentunya kalian ingin sekali bergabung dengan tim ternama ML ya guys, namun sayangnya untuk menjadi bagian dari tim tidak mudah guys, kalian harus memiliki win rate paling tidak sebesar 70%. Tentu saja untuk mencapai angka tersebut sangat sulit apalagi bagi kalian yang baru terjun di dunia game Mobile Legends.</string>
    <string name="match">Total match anda</string>
    <string name="wrText">Total winrate anda</string>
    <string name="wrtujuan">Winrate yang anda inginkan</string>

    <string name="eMatch">Total match tidak boleh kosong bos</string>
    <string name="eWr">Total winrate tidak boleh kosong bos</string>
    <string name="eWrReq">Berapa winrate yang kamu inginkan? Tolong diisi</string>

    <string name="eInput">mohon maaf, tidak boleh diisi 0 atau kurang dari 0</string>

    <string name="hasil">butuh %1$s match kemenangan agar winrate yang anda tuju tercapai, Semangat!!</string>
    <string name="invalidWrReq">Anda tidak bisa meraih winrate 100% lagi</string>
    <string name="saran_pertandingan">Coba untuk bermain bersama teman yang jago, agar winrate mu tercapai dengan cepat</string>
    <string name="lihat_saran">Lihat Saran</string>
    <string name="copyright">%1$s</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="fragment_hitung">Hitung Winrate</string>
    <string name="saran">Saran</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">Total Match: %1$s Match\nTotal Winrate: %2$s\nMatch yang dibutuhkan: %3$s Kemenangan Lagi</string>
    <string name="belum_ada_data">Belum Ada Data</string>
    <string name="histori">Histori</string>
    <string name="hasil_x">Total Match: %1s Butuh Butuh: %2s Win</string>
    <string name="channel_name">Reminder</string>
    <string name="channel_desc">Reminder data WinRate</string>
    <string name="notif_title">Cek WinRate kamu sekarang juga!</string>
    <string name="notif_text">Cek yuk apakah WinRate kamu terjadi perubahan :)</string>

    <string name="data_x">Total Winrate: %1s</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="batal">Batal</string>
</resources>