<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/hitungFragment">

    <fragment
        android:id="@+id/hitungFragment"
        android:name="org.d3if6706202072.assessment1.ui.HitungFragment"
        android:label="@string/fragment_hitung"
        tools:layout="@layout/fragment_hitung" >
        <action
            android:id="@+id/action_hitungFragment_to_saranFragment"
            app:destination="@id/saranFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/saranFragment"
        android:name="org.d3if6706202072.assessment1.ui.SaranFragment"
        android:label="@string/saran"
        tools:layout="@layout/fragment_saran"/>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if6706202072.assessment1.ui.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>
</navigation>