<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:text="@string/intro"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idmatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/intro"
        android:text="@string/match" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/numatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="38"
        android:inputType="number"
        android:hint="@string/match" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/idmatch"
        android:hint="@string/wrText" >
        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nuwr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="38"
        android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/towr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/wr"
        android:hint="@string/wrtujuan" >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nutowr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="38"
        android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="reset"
        android:layout_marginTop="20dp"
        android:ems="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/towr"
        android:textColor="@color/white"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:backgroundTint="@color/resetColor"
        app:strokeWidth="5dp"
        app:strokeColor="@color/resetColorStroke"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hasil"
        android:layout_marginTop="2dp"
        android:ems="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonReset"
        android:textColor="@color/white"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:backgroundTint="@color/hasilColor"
        app:strokeWidth="5dp"
        app:strokeColor="@color/hasilColorStroke"
        />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <TextView
        android:id="@+id/hasilId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:text="butuh: 12" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>